--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -8,15 +8,51 @@
 
 body{
     background: #3399ff;
-    color: #000000;
+    color: #6666ff;
 }
 
 #header{
     width: 100%;
     height: 100vh;
     background-image: url(images/donut.jpeg);
-    background-size: 100%;
-    background-position: center;
+    background-size: cover;
+    background-position: center;}
 
 
+.container {
+    padding: 10px 10%;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.logo{
+    width: 140px;
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a {
+    color: #ffcc66;
+    text-decoration: none;
+    font-size: 25px;
+    position: relative;
+}
+
+nav ul li a::after{
+    content: '';
+    width: 100%;
+    height: 3px;
+    background: #cc6600;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
 }
