--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -78,7 +78,7 @@ nav ul li a:hover::after{
 /*-------------about-------------*/
 #about{
     padding: 273px 0;
-    color: #800000;
+    color: #ff9900;
 }
 .row{
     display: flex;
@@ -104,3 +104,40 @@ nav ul li a:hover::after{
     font-weight: 600;
 }
 
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
+}
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+
+.tab-links::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #000000;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+
+.tab-links.active-link::after{
+    width: 50%;
+}
+
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+
+.tab-contents ul li span{
+     color:aqua;
+     font-size: larger;
+
+}
