class object ET

--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -141,3 +141,11 @@ nav ul li a:hover::after{
      font-size: larger;
 
 }
+
+.tab-contents{
+    display: none;
+}
+
+.tab-contents.active-tab{
+    display: block;
+}
