--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -8,13 +8,13 @@
 
 body{
     background: #00284d;
-    color: #6666ff;
+    color: #ff6666;
 }
 
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/donut.jpeg);
+    background-image: url(images/work.jpg);
     background-size: cover;
     background-position: center;}
 
@@ -41,7 +41,7 @@ nav ul li{
 }
 
 nav ul li a {
-    color: #0066ff;
+    color: hsl(161, 100%, 50%);
     text-decoration: none;
     font-size: 30px;
     position: relative;
