--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -7,14 +7,14 @@
 }
 
 body{
-    background: #00284d;
-    color: #ff6666;
+    background: #0f004d;
+    color: #e90c0c;
 }
 
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/work.jpg);
+    background-image: url(images/improved.png);
     background-size: cover;
     background-position: center;}
 
@@ -41,7 +41,7 @@ nav ul li{
 }
 
 nav ul li a {
-    color: hsl(161, 100%, 50%);
+    color: hsl(240, 100%, 14%);
     text-decoration: none;
     font-size: 30px;
     position: relative;
@@ -72,13 +72,13 @@ nav ul li a:hover::after{
 }
 
 .header-text h1 span{
-    color: #000099;
+    color: #990000;
 }
 
 /*-------------about-------------*/
 #about{
-    padding: 370px 0;
-    color: #ff9900;
+    padding: 457px 0;
+    color: #e90c0c;
 }
 .row{
     display: flex;
@@ -120,7 +120,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #000000;
+    background: #511500d8;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -137,7 +137,7 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-     color:aqua;
+     color:rgb(202, 1, 1);
      font-size: larger;
 
 }
@@ -152,11 +152,77 @@ nav ul li a:hover::after{
 
 /*---------services------------*/
 #services{
-    padding: 30px 0;
+    padding: 10px 0;
 }
+
+.services-list div h1{
+    color: aquamarine;
+}
+
 .services-list{
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
+    color: rgb(246, 0, 0);
+}
+
+.services-list div{
+    background: #2717a3;
+    padding: 40px;
+    font-size: larger;
+    font-weight: 600;
+    border-radius: 10px;
+    transition: background 0.6s, transform 0.5s;
+}
+
+.services-list div i{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.services-list div h2{
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 15px;
+    
+}
+
+.services-list div a{
+    text-decoration: none;
+    color: rgb(194, 11, 11);
+    font-size: 20px;
+    margin-top: 1px;
+    display: inline-block;
+}
+
+.services-list div:hover{
+    background: #6b1a1a;
+    transform: translateY(-15px);
+}
+
+
+/*-----------portfolio------------*/
+
+#portfolio{
+    padding: 50px 0;
+}
+
+.work-list{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.work img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
 }
