--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/improved.png);
+    background-image: url(images/improvedp2.png);
     background-size: cover;
     background-position: center;}
 
@@ -41,7 +41,7 @@ nav ul li{
 }
 
 nav ul li a {
-    color: hsl(240, 100%, 14%);
+    color: hsl(244, 74%, 17%);
     text-decoration: none;
     font-size: 30px;
     position: relative;
@@ -120,7 +120,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #511500d8;
+    background: #865dd8d8;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -225,4 +225,33 @@ nav ul li a:hover::after{
     width: 100%;
     border-radius: 10px;
     display: block;
+}
+
+.layer{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0,0,0,0.6), #881b00);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 30px;
+}
+
+.layer:hover{
+    background: #0b354b;
+    transform: translateY(-15px);
+}
+
+.layer h3{
+    font-weight: 900;
+    margin-bottom: 20px;
+    font-size: 80px;
 }
