--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', 'sans-serif';
+    font-family: 'Ppins', 'sans-serif';
     box-sizing: border-box;
 
 }
@@ -230,7 +230,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0,0,0,0.6), #881b00);
+    background: linear-gradient(rgba(0,0,0,0.6), #6a0606);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -243,11 +243,14 @@ nav ul li a:hover::after{
     padding: 0 40px;
     text-align: center;
     font-size: 30px;
+    
 }
 
 .layer:hover{
-    background: #0b354b;
+    background: #060044;
     transform: translateY(-15px);
+    transition: background 0.8s, transform 0.7s;
+    border-radius: 10px;
 }
 
 .layer h3{
@@ -255,3 +258,25 @@ nav ul li a:hover::after{
     margin-bottom: 20px;
     font-size: 80px;
 }
+
+
+.layer a {
+    margin-top: 20px;
+    color: ;
+    font-size: 41px;
+}
+
+
+.layer p:hover{
+    color: #6a0606;
+}
+
+.layer h3:hover{
+    color: #6a0606;
+}
+
+.layer a:hover{
+    font-size: 50px;
+    transform: 1px;
+}
+
