--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -225,11 +225,12 @@ nav ul li a:hover::after{
     width: 100%;
     border-radius: 10px;
     display: block;
+    transition: transform 0.5s;
 }
 
 .layer{
     width: 100%;
-    height: 100%;
+    height: 0;
     background: linear-gradient(rgba(0,0,0,0.6), #6a0606);
     border-radius: 10px;
     position: absolute;
@@ -243,14 +244,7 @@ nav ul li a:hover::after{
     padding: 0 40px;
     text-align: center;
     font-size: 30px;
-    
-}
-
-.layer:hover{
-    background: #060044;
-    transform: translateY(-15px);
-    transition: background 0.8s, transform 0.7s;
-    border-radius: 10px;
+    transition: height 0.5s;
 }
 
 .layer h3{
@@ -262,17 +256,18 @@ nav ul li a:hover::after{
 
 .layer a {
     margin-top: 20px;
-    color: ;
+    color: #990000;
+    text-decoration: none;
     font-size: 41px;
 }
 
 
 .layer p:hover{
-    color: #6a0606;
+    color: #963900;
 }
 
 .layer h3:hover{
-    color: #6a0606;
+    color: #841200;
 }
 
 .layer a:hover{
@@ -280,3 +275,27 @@ nav ul li a:hover::after{
     transform: 1px;
 }
 
+.work:hover img{
+    transform: scale(1.1);
+}
+
+.work:hover .layer{
+     height: 100%;
+}
+
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    font-size: larger;
+    border: 1px solid #3600a1;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #0f004d;
+    transition: background 0.5s;
+}
+
+.btn:hover{
+    background: #6a0606;
+}
