--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -343,3 +343,24 @@ nav ul li a:hover::after{
     color:#3600a1;
     transform: translateX(-5px);
 }
+
+.btn.btn2{
+    display: inline-block;
+    background:#6a0606;
+}
+
+.contact-right form{
+    width: 100%;
+}
+
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #38004d;
+    padding: 15px;
+    margin: 15px 0;
+    color: #000000;
+    font-size: 18px;
+    border-radius: 6px;
+}
