--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -41,7 +41,7 @@ nav ul li{
 }
 
 nav ul li a {
-    color: hsl(244, 74%, 17%);
+    color: hsla(246, 76%, 16%, 0.847);
     text-decoration: none;
     font-size: 30px;
     position: relative;
