--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -360,7 +360,7 @@ form input, form textarea{
     background: #38004d;
     padding: 15px;
     margin: 15px 0;
-    color: #000000;
+    color: #f9f2f2;
     font-size: 18px;
     border-radius: 6px;
 }
