--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -8,7 +8,7 @@
 
 body{
     background: #0f004d;
-    color: #e90c0c;
+    color: #980d0d;
 }
 
 #header{
@@ -363,4 +363,65 @@ form input, form textarea{
     color: #f9f2f2;
     font-size: 18px;
     border-radius: 6px;
+}
+
+form btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background:#2c095cc2;
+    font-weight: 300;
+    margin-top: 20px;
+}
+
+.copyright i{
+    color:rgb(202, 1, 1);
+}
+/*-----------css for small screens-------*/
+nav .fa-solid{
+    display: none;
+}
+
+@media only screen and (max-width: 600px){
+    #header{
+        background-image: url(images/phone.jpg);
+    }
+    .header-text{
+        margin-top:100%;
+        font-size: 16px;
+    }
+    .header-text h1{
+        font-size: 30px;
+    }
+    nav .fa-solid{
+    display: block;
+    font-size: 25px;
+    }
+    nav ul{
+        background:#6a0606;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: ;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
 }
