--- a/Web Dev/Portfolio/style.css
+++ b/Web Dev/Portfolio/style.css
@@ -126,7 +126,7 @@ body.open .right-curtain {
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/attempted.png);
+    background-image: url(images/IMG_3190.jpg);
     background-size: cover;
     background-position: center;}
 
